test-suite/bugs/closed/bug_8369.v
(* Was failing in master with a not_found generated by the printer *)

Fail Definition foo := fun '(u, v) p2 => (u, v).
